# pico86

./: .gitignore  CMakeLists.txt  README.md
spec/: SPEC.txt  flags.txt  generate_spec.sh  instructions.txt  pico86.txt  registers.txt
spec/instructions/: arithmetic.txt  flow.txt  logical.txt
spec/memory/: segmentation.txt  structure.txt
src/: cpu.c  cpu.h  flags.h  instructions.h  logger.c  logger.h  main.c  memory.c  memory.h  registers.h  types.h
src/cpu/: cpu.c  cpu.h
src/cpu/definitions/: instructions.h  registers.h
src/cpu/memory/: memory.c  memory.h
src/definitions/: types.h
src/util/: debug.c  debug.h  logger.c  logger.h
